2006-12-10  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: add message logging functions
	* vala/valasemanticanalyzer.vala: support enum to int conversions and
	  diagnostic methods
	* vala/valacodegenerator.vala: support do statements

2006-11-24  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: fix generating switch statements

2006-11-23  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: allow main methods without parameters and
	  main methods returning void, check complete signature of main method

2006-11-22  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valacodegenerator.vala: support enum members with
	  values

2006-11-22  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: add direct_hash and direct_equal
	* tests/Makefile.am: distribute reference output

2006-11-21  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valaenum.vala, vala/valafield.vala,
	  vala/valainterface.vala, vala/valanamespace.vala,
	  vala/valastruct.vala: use new attribute functionality

2006-11-21  Jürg Billeter  <j@bitron.ch>

	* vala/valaattribute.vala: add has_argument, get_string, and get_integer
	  methods
	* vala/valacodenode.vala: add get_attribute method
	* vala/valamethod.vala: use new attribute functionality

2006-11-21  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala, vala/valasemanticanalyzer.vala: don't
	  require GLib namespace at runtime in symbol resolver and semantic
	  analyzer

2006-11-21  Jürg Billeter  <j@bitron.ch>

	* tests/testrunner.sh: add test script
	* tests/*.out: add reference output for test cases
	* tests/Makefile.am: add test environment

2006-11-20  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: fix code generation for structs

2006-11-11  Jürg Billeter  <j@bitron.ch>

	* configure.ac: remove AM_MAINTAINER_MODE to always rebuild scanner and
	  parser if changed

2006-11-09  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/glib-2.0.vala: add GArray and GTree structures